Úprava ConnectionStringu SQLite DB v ApplicationDbContext Přidání Db ConnectionStringu do appsettings.json Přidání Db ConnectionStringu do Program.cs

--- a/WebMVCApplKamPublic/appsettings.json
+++ b/WebMVCApplKamPublic/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalDB": "Data Source=web_mvc_app_db.sqlite"
+  }
 }
